--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,9 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sia"
         android:usesCleartextTraffic="true">
-        <activity android:name=".DetailsActivity"
-            android:theme="@style/Theme.Sia.NoActionBar" ></activity>
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
